[gd_scene load_steps=33 format=2]

[ext_resource path="res://Objects/Actors/Player/Rose/Rose_Main_Script.gd" type="Script" id=1]
[ext_resource path="res://Objects/Actors/Player/Rose/States/Movement States/Move_On_Ground_State.gd" type="Script" id=2]
[ext_resource path="res://Objects/Actors/Player/Rose/States/Movement States/Move_In_Air_State.gd" type="Script" id=3]
[ext_resource path="res://Objects/Actors/Player/Rose/States/Movement States/Ledge_Grab_State.gd" type="Script" id=4]
[ext_resource path="res://Objects/Actors/Player/Rose/States/Movement States/Vault_State.gd" type="Script" id=5]
[ext_resource path="res://Objects/Actors/Player/Rose/States/Style States/Wind_Dance.gd" type="Script" id=6]
[ext_resource path="res://Objects/Actors/Player/Rose/States/Style States/Closed_Fan.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Wind_Dance_B"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.16, 0.44, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_fric"
}, {
"args": [ Vector2( 400, 0 ) ],
"method": "add_velocity"
}, {
"args": [  ],
"method": "activate_fric"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Wind_Dance_HoldX_Down_Ground"
length = 0.6
loop = true
step = 0.07
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.28, 0.56 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Wind_Dance_HoldX_Hor_Ground"
length = 0.9
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.46, 0.84 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Wind_Dance_HoldY"
length = 0.65
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.56 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Wind_Dance_XX_Down_Air"
length = 0.5
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.28, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Wind_Dance_XX_Hor"
length = 0.5
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.28, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Wind_Dance_XX_Up"
length = 0.65
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.28, 0.54 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.28, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.28, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Wind_Dance_X_Up"
length = 0.5
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.28, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Wind_Dance_Y_Down_Air"
length = 1.15
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.28, 0.62, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.18, 0.2, 0.44, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_grav"
}, {
"args": [ Vector2( 0, 400 ) ],
"method": "add_velocity"
}, {
"args": [  ],
"method": "activate_grav"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "add_velocity"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "Wind_Dance_Y_Hor"
length = 1.15
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.28, 0.62, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16, 0.18, 0.2, 0.42, 0.44, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_grav"
}, {
"args": [  ],
"method": "deactivate_fric"
}, {
"args": [ Vector2( 600, 0 ) ],
"method": "add_velocity"
}, {
"args": [  ],
"method": "activate_grav"
}, {
"args": [  ],
"method": "activate_fric"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "add_velocity"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "Wind_Dance_Y_Hor_Down"
length = 1.15
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.28, 0.62, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16, 0.18, 0.2, 0.42, 0.44, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_grav"
}, {
"args": [  ],
"method": "deactivate_fric"
}, {
"args": [ Vector2( 400, 400 ) ],
"method": "add_velocity"
}, {
"args": [  ],
"method": "activate_grav"
}, {
"args": [  ],
"method": "activate_fric"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "add_velocity"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "Wind_Dance_Y_Hor_Up"
length = 1.15
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.28, 0.62, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16, 0.18, 0.2, 0.42, 0.44, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_grav"
}, {
"args": [  ],
"method": "deactivate_fric"
}, {
"args": [ Vector2( 400, -400 ) ],
"method": "add_velocity"
}, {
"args": [  ],
"method": "activate_grav"
}, {
"args": [  ],
"method": "activate_fric"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "add_velocity"
} ]
}

[sub_resource type="Animation" id=15]
resource_name = "Wind_Dance_Y_Up"
length = 1.15
loop = true
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath("Style_States/Wind_Dance")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.28, 0.62, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_save_event"
}, {
"args": [  ],
"method": "set_interrupt"
}, {
"args": [  ],
"method": "attack_done"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.18, 0.2, 0.44, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "deactivate_grav"
}, {
"args": [ Vector2( 0, -400 ) ],
"method": "add_velocity"
}, {
"args": [  ],
"method": "activate_grav"
}, {
"args": [ Vector2( 0, 0 ) ],
"method": "add_velocity"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.3
loop = true

[sub_resource type="Animation" id=17]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/Hitbox:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ NodePath("Hitbox/Hitbox") ],
"method": "tween_rotation_to_origin"
} ]
}

[sub_resource type="Animation" id=18]
length = 0.3
loop = true

[sub_resource type="Animation" id=19]
length = 0.4
loop = true
step = 0.2

[sub_resource type="Animation" id=25]
resource_name = "ledgegrab"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ NodePath("Hitbox/Hitbox") ],
"method": "tween_rotation_to_origin"
}, {
"args": [ NodePath("Hitbox"), 0.0, 25.0 ],
"method": "tween_rotation"
}, {
"args": [ NodePath("Hitbox") ],
"method": "tween_rotation_to_origin"
} ]
}

[sub_resource type="Animation" id=20]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/Hitbox:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 15.0, 20.0, 15.0, 20.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ NodePath("Hitbox/Hitbox"), 10.0, 25.0 ],
"method": "tween_rotation"
}, {
"args": [ NodePath("Hitbox/Hitbox"), 25.0, 10.0 ],
"method": "tween_rotation"
}, {
"args": [ NodePath("Hitbox/Hitbox"), 10.0, 25.0 ],
"method": "tween_rotation"
} ]
}

[sub_resource type="CapsuleShape2D" id=21]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 10, 2 )

[sub_resource type="CapsuleShape2D" id=23]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 254.779, 147.421 )

[node name="Rose" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 1024
script = ExtResource( 1 )

[node name="TopAnim" type="AnimationPlayer" parent="."]
anims/Wind_Dance_B = SubResource( 1 )
anims/Wind_Dance_HoldX_Down_Ground = SubResource( 2 )
anims/Wind_Dance_HoldX_Hor_Ground = SubResource( 3 )
anims/Wind_Dance_HoldY = SubResource( 4 )
anims/Wind_Dance_XX_Down_Air = SubResource( 5 )
anims/Wind_Dance_XX_Hor = SubResource( 6 )
anims/Wind_Dance_XX_Up = SubResource( 7 )
anims/Wind_Dance_X_Down_Air = SubResource( 8 )
anims/Wind_Dance_X_Hor = SubResource( 9 )
anims/Wind_Dance_X_Up = SubResource( 10 )
anims/Wind_Dance_Y_Down_Air = SubResource( 11 )
anims/Wind_Dance_Y_Hor = SubResource( 12 )
anims/Wind_Dance_Y_Hor_Down = SubResource( 13 )
anims/Wind_Dance_Y_Hor_Up = SubResource( 14 )
anims/Wind_Dance_Y_Up = SubResource( 15 )
anims/fall = SubResource( 16 )
anims/idle = SubResource( 17 )
anims/jump = SubResource( 18 )
anims/jump-to-fall = SubResource( 19 )
anims/ledgegrab = SubResource( 25 )
anims/run = SubResource( 20 )

[node name="Sprites" type="Node2D" parent="."]

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 21 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -20 )

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 20 )
shape = SubResource( 21 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Movement_States" type="Node2D" parent="."]

[node name="Move_On_Ground" type="Node2D" parent="Movement_States"]
script = ExtResource( 2 )

[node name="Move_In_Air" type="Node2D" parent="Movement_States"]
script = ExtResource( 3 )

[node name="Ledgebox" type="Area2D" parent="Movement_States/Move_In_Air"]
position = Vector2( 10, -26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movement_States/Move_In_Air/Ledgebox"]
shape = SubResource( 22 )

[node name="Ledge_Grab" type="Node2D" parent="Movement_States"]
script = ExtResource( 4 )

[node name="Climb_Timer" type="Timer" parent="Movement_States/Ledge_Grab"]
one_shot = true

[node name="Climbbox" type="Area2D" parent="Movement_States/Ledge_Grab"]
position = Vector2( 13.9215, -38.9501 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movement_States/Ledge_Grab/Climbbox"]
shape = SubResource( 23 )

[node name="Vault" type="Node2D" parent="Movement_States"]
script = ExtResource( 5 )

[node name="Style_States" type="Node2D" parent="."]
editor/display_folded = true

[node name="Wind_Dance" type="Node2D" parent="Style_States"]
script = ExtResource( 6 )

[node name="ChargeXTimer" type="Timer" parent="Style_States/Wind_Dance"]
one_shot = true

[node name="ChargeYTimer" type="Timer" parent="Style_States/Wind_Dance"]
one_shot = true

[node name="ComboTimer" type="Timer" parent="Style_States/Wind_Dance"]
wait_time = 1.5
one_shot = true

[node name="Closed_Fan" type="Node2D" parent="Style_States"]
script = ExtResource( 7 )

[node name="ChargeXTimer" type="Timer" parent="Style_States/Closed_Fan"]
one_shot = true

[node name="ChargeYTimer" type="Timer" parent="Style_States/Closed_Fan"]
one_shot = true

[node name="DetectHitboxArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 7424

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectHitboxArea"]
shape = SubResource( 24 )

[node name="RayCastCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7169

[node name="ledge_cast_right" type="RayCast2D" parent="."]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="ledge_cast_left" type="RayCast2D" parent="."]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( -20, 0 )

[node name="Stamina_Timer" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="consume_resource" from="." to="." method="_on_Rose_consume_resource"]
[connection signal="timeout" from="Movement_States/Ledge_Grab/Climb_Timer" to="Movement_States/Ledge_Grab" method="_on_Climb_Timer_timeout"]
[connection signal="timeout" from="Style_States/Wind_Dance/ChargeXTimer" to="Style_States/Wind_Dance" method="_on_ChargeXTimer_timeout"]
[connection signal="timeout" from="Style_States/Wind_Dance/ChargeYTimer" to="Style_States/Wind_Dance" method="_on_ChargeYTimer_timeout"]
[connection signal="timeout" from="Style_States/Wind_Dance/ComboTimer" to="Style_States/Wind_Dance" method="_on_ComboTimer_timeout"]
[connection signal="timeout" from="Style_States/Closed_Fan/ChargeXTimer" to="Style_States/Closed_Fan" method="_on_ChargeXTimer_timeout"]
[connection signal="timeout" from="Style_States/Closed_Fan/ChargeYTimer" to="Style_States/Closed_Fan" method="_on_ChargeYTimer_timeout"]
[connection signal="area_entered" from="DetectHitboxArea" to="." method="_on_DetectHitboxArea_area_entered"]
[connection signal="area_exited" from="DetectHitboxArea" to="." method="_on_DetectHitboxArea_area_exited"]
[connection signal="timeout" from="Stamina_Timer" to="." method="_on_Stamina_Timer_timeout"]
